# nanodjango-examples

./: .gitignore  pyproject.toml
hello_world/: hello_world.py
