[project]
name = "nanodjango-examples"
version = "0.0.0-dev0"
description = "Examples on how to make the most of nanodjango."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nanodjango>=0.11.2",
]

[project.urls]
Repository = "https://github.com/StuartMacKay/nanodjango-examples.git"
Issues = "https://github.com/StuartMacKay/nanodjango-examples/issues"
Changelog = "https://github.com/StuartMacKay/nanodjango-examples/blob/master/CHANGELOG.md"

[dependency-groups]
dev = []
